# open-pi-mem

./: .gitignore  README.md  dataset_survey.html  pyproject.toml
configs/: high_level.manual.yaml  high_level.yaml  high_level_qwen3_vl_8b_local.example.yaml  high_level_vlm.yaml  low_level.yaml  open_data.yaml  rmbench_tasks.yaml
data/manual_annotations/: episodes.annotated.jsonl  memory_supervision.manual.jsonl
data/manual_annotations/episodes/: example_2.json
docs/: design.md
examples/: episodes.sample.jsonl  low_level_rollouts.sample.jsonl  memory_supervision.sample.jsonl  rmbench_example.py
prompts/: memory_summary_prompt.txt
scripts/: generate_manual_high_level_data.py  generate_memory_data.py  prepare_open_dataset.py  run_annotation_app.py  run_high_level_inference.py  run_rmbench_eval.py  run_rmbench_high_level_episode_gemini_sdk_video.py  run_test_viewer_app.py  train_high_level.py  train_low_level.py
scripts/archive/: run_rmbench_high_level_episode.py  run_rmbench_high_level_episode_gemini_multiframe.py  run_rmbench_high_level_episode_gemini_sdk_multiframe.py  run_rmbench_high_level_episode_openai.py  run_rmbench_high_level_episode_openai_multiframe.prompt_v_current.py  run_rmbench_high_level_episode_openai_multiframe.py
src/open_pi_mem/: cli.py
src/open_pi_mem/data/: build_high_level_dataset.py  memory_generation.py  open_datasets.py  schemas.py  training_datasets.py
src/open_pi_mem/models/: action_expert.py  backbones.py  high_level_policy.py  (+2 more)
web/annotator/: app.js  index.html  styles.css
web/viewer/: app.js  index.html  styles.css
(+31 files in other folders)
